# portfolio-shirsendu

./: .dockerignore  .env.example  .env.native  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  README.md  app.vue  certificates.yml  docker-compose.prod.yml  docker-compose.yml  env.d.ts  eslint.config.js  eslint.config.mjs  experiences.yml  hackathons.yml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  projects.yml  tailwind.config.ts
.changeset/: big-turtles-cheer.md  bright-trees-relate.md  calm-books-accept.md  chatty-rules-enjoy.md  chilled-meals-tickle.md  chilled-toys-leave.md  chilled-zoos-lay.md  chilly-cougars-smile.md  cold-rice-poke.md  cuddly-eggs-fry.md  cuddly-llamas-punch.md  dull-cheetahs-lay.md  early-timers-teach.md  eight-swans-turn.md  eleven-elephants-battle.md  empty-pumpkins-talk.md  fair-fishes-report.md  few-shirts-judge.md  few-weeks-cheat.md  great-bats-travel.md  great-fans-lay.md  great-icons-serve.md  green-teachers-turn.md  happy-phones-appear.md  hip-camels-end.md  hip-eyes-shop.md  honest-rabbits-carry.md  hot-cooks-build.md  hungry-icons-melt.md  itchy-lemons-exercise.md  late-cars-deliver.md  late-ladybugs-judge.md  late-rockets-burn.md  light-brooms-search.md  little-humans-do.md  little-spiders-tie.md  loud-vans-care.md  many-panthers-deliver.md  metal-buses-judge.md  mighty-bugs-argue.md  (+44 more)
.husky/: commit-msg  pre-commit
app/: app.vue
components/: AppFooter.vue  AppHeader.vue  AppInstallPrompt.vue  AppNavbar.vue  AppRibbon.server.vue  CTAButton.vue  (+12 more)
native/: Cargo.toml  tauri.conf.json
(+125 files in other folders)
