[package]
name = "portfolio-shirsendu"
version = "1.16.2"
description = "Shirsendu's devfolio showcasing his projects, experience and certification in a visually appealing manner"
authors = ["Shirsendu Bairagi"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Algostract/portfolio-shirsendu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.2", features = [] }
tauri-plugin-log = "2.0.0-rc"
